fixed error (?!) with bibtex key

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -284,7 +284,7 @@
 	keywords = {dynamic languages, refactoring, refactoring tools, static analysis},
 }
 
-@inproceedings{FFM+11,
+@inproceedings{FFM11,
 	author = {Asger Feldthaus and Todd Millstein and Anders M{\o}ller and Max Sch\"{a}fer and Frank Tip},
 	title = {Tool-supported refactoring for JavaScript},
 	booktitle = {Proceedings of the 2011 ACM international conference on Object oriented programming systems languages and applications},
