added one more citation for fuzzing

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -301,3 +301,20 @@
 	address = {New York, NY, USA},
 	keywords = {JavaScript, refactoring},
 } 
+
+@inproceedings{ZWZH11,
+	author = {Jinjing Zhao and Yan Wen and Gang Zhao},
+	title = {H-fuzzing: a new heuristic method for fuzzing data generation},
+	booktitle = {Proceedings of the 8th IFIP international conference on Network and parallel computing},
+	series = {NPC'11},
+	year = {2011},
+	isbn = {978-3-642-24402-5},
+	location = {Changsha, China},
+	pages = {32--43},
+	numpages = {12},
+	url = {http://dl.acm.org/citation.cfm?id=2062932.2062936},
+	acmid = {2062936},
+	publisher = {Springer-Verlag},
+	address = {Berlin, Heidelberg},
+	keywords = {control flow graph, dynamic analysis, fuzzing test, program security testing, program slicing, static analysis},
+} 
