Have cart show risky completions

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -395,7 +395,7 @@ as they blocked about two thirds of the fuzzed programs.
         \begin{center}
                 \includegraphics[width=0.95\textwidth]{chart}
         \end{center}
-        \caption{Successful completion of each phase per language and overall}
+        \caption{Risky completion of each phase per language and overall.}
         \label{fig:results}
 \end{figure*}
 
