adding general terms; categories etc

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -40,11 +40,11 @@ Our study is based on a large corpus of programs written in several programming
 languages systematically perturbed using a mutation-based fuzz generator.
 We found ... % XXX
 \end{abstract}
-
-\category{CR-number}{subcategory}{third-level}
+ 
+ \category{D.3.0}{Programming Languages}{General}
 
 \terms
-term1, term2
+Reliability, Experimentation, Measurement
 
 \keywords
 Programming Languages, Compiler, Fuzzing, Unit Testing
