--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -435,19 +435,18 @@ associated with scripting language features.
 \begin{tabular}{ l r r r r r r r r r r r r r r r r r r }
 & \multicolumn{3}{c}{IntPert (\%)} & \multicolumn{3}{c}{IdSub (\%)} & \multicolumn{3}{c}{SimSub (\%)} & \multicolumn{3}{c}{RandCharSub (\%)} & \multicolumn{3}{c}{RandTokenSub (\%)}\\ 
 	       & com  & run  & out  & com  & run  & out  & com  & run  & out  & com & run   & out  & com  & run  & out\\
-\hline															
-C          & 100  & 52.6 & 18.6 & 16.6 & 14   & 10.4 & 20.6	& 16.6 & 9.6  &	7.3	 & 7.3  & 6.1  & 5.4  & 5.1  & 3.4\\
-C++        & 91.7 &	47.2 & 6.2  & 5.6  & 4.9  & 3.9	 & 8.3	& 7.1  & 3.1  & 3.7	 & 3.7  & 3.4  & 2.6  & 2.4  & 1.3\\
-C\#        & 69.8 & 65.2 & 11.9 & 6.9  & 6.9  & 6.6	 & 7.7	& 7.4  & 6.0  & 4	 & 4    & 3.9  & 3    & 3    & 2.7\\
-Haskell    & 89.4 & 84   & 10.3 & 4    & 1.9  & 0.4	 & 13.4	& 11.2 & 2.1  & 3.7	 & 3.4  & 2.3  & 3.5  & 3.2  & 1.8\\
-Java       & 100  & 82.5 & 20.3 & 5.1  & 3.6  & 2.9	 & 7.9	& 6.4  & 3.1  & 3.1	 & 3    & 2.9  & 2.3  & 1.9  & 1.7\\
-JavaScript & 100  & 79.7 & 6    & 65.9 & 18.4 & 5.7	 & 57.2	& 22.9 & 5.1  & 30.9 & 9.6  & 7.9  & 15   & 5.7  & 1.9\\
-PHP        & 99.2 & 87.5 & 16.2 & 56.4 & 34.1 & 3	 & 46.2	& 39.7 & 1.4  & 37.4 & 32.7 & 1.9  & 25.7 & 23.7 & 1.1\\
-Perl       & 100  & 91   & 22.1 & 57.9 & 29.3 & 7.4	 & 44.3	& 27.3 & 10.5 & 15.1 & 11.6	& 6.7  & 18.2 & 14.2 & 4.9\\
-Python     & 100  & 75.3 & 14.4 & 43.3 & 17.3 & 12.6 & 45.2	& 23.6 & 10.0 & 18.3 & 6.9	& 6.1  & 20.7 & 10.6 & 5.7\\
-Ruby       & 100  & 91.1 & 31.6 & 52.3 & 11.8 & 9.1	 & 58	& 27   & 16.1 & 27.6 & 14.7	& 12.3 & 33.4 & 15.8 & 11.1\\
-\hline															
-\textbf{Mean} & \textbf{95.1} & \textbf{74.5} & \textbf{15.8} & \textbf{30.6} & \textbf{14.0} & \textbf{6.2} & \textbf{30.3} & \textbf{18.7} & \textbf{6.6} & \textbf{15.1} & \textbf{9.7} & \textbf{5.3} & \textbf{12.8} & \textbf{8.5} & \textbf{3.5}\\
+\hline													
+C & 100.0 & 52.6 & 34.0 & 16.6 & 14.0 & 3.6  & 20.6 & 16.6 & 7.0  & 7.3 & 7.3 & 1.1  & 5.4 & 5.1 & 1.7 \\
+C++ & 91.7 & 47.2 & 41.0  & 5.6 & 4.9 & 1.0  & 8.3 & 7.1 & 4.0  & 3.7 & 3.7 & 0.3  & 2.6 & 2.4 & 1.1 \\
+C\# & 69.8 & 65.2 & 53.2  & 6.9 & 6.9 & 0.3  & 7.7 & 7.4 & 1.4  & 4.0 & 4.0 & 0.1  & 3.0 & 3.0 & 0.3 \\
+Haskell & 89.4 & 84.0 & 73.7  & 4.0 & 1.9 & 1.5  & 13.4 & 11.2 & 9.1  & 3.7 & 3.4 & 1.1  & 3.5 & 3.2 & 1.5 \\
+Java & 100.0 & 82.5 & 62.1  & 5.1 & 3.6 & 0.7  & 7.9 & 6.4 & 3.3  & 3.1 & 3.0 & 0.1  & 2.3 & 1.9 & 0.1 \\
+Javascript & 100.0 & 79.7 & 73.7  & 65.9 & 18.4 & 12.7  & 57.2 & 22.9 & 17.8  & 30.9 & 9.6 & 1.7  & 15.0 & 5.7 & 3.9 \\
+PHP & 99.2 & 87.5 & 71.3  & 56.4 & 34.1 & 31.0  & 46.2 & 39.7 & 38.3  & 37.4 & 32.7 & 30.9  & 25.7 & 23.7 & 22.6 \\
+Perl & 100.0 & 91.0 & 68.9  & 57.9 & 29.3 & 21.9  & 44.3 & 27.3 & 16.8  & 15.1 & 11.6 & 4.9  & 18.2 & 14.2 & 9.2 \\
+Python & 100.0 & 75.3 & 60.9  & 43.3 & 17.3 & 4.7  & 45.2 & 23.6 & 13.6  & 18.3 & 6.9 & 0.7  & 20.7 & 10.6 & 4.9 \\
+Ruby & 100.0 & 91.1 & 59.5  & 52.3 & 11.8 & 2.7  & 58.0 & 27.0 & 10.9  & 27.6 & 14.7 & 2.4  & 33.4 & 15.8 & 4.8 \\
+\textbf{Mean} & \textbf{95.1} & \textbf{74.5} & \textbf{58.7}  & \textbf{30.6} & \textbf{14.0} & \textbf{7.8}  & \textbf{30.3} & \textbf{18.7} & \textbf{12.1}  & \textbf{15.1} & \textbf{9.7} & \textbf{4.3}  & \textbf{12.8} & \textbf{8.5} & \textbf{5.0} \\
 \end{tabular}
 \end{center}
 \caption{Success rates for each phase, fuzz operation, and language.}
