added one more line

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -446,6 +446,7 @@ PHP & 99.2 & 87.5 & 71.3  & 56.4 & 34.1 & 31.0  & 46.2 & 39.7 & 38.3  & 37.4 & 3
 Perl & 100.0 & 91.0 & 68.9  & 57.9 & 29.3 & 21.9  & 44.3 & 27.3 & 16.8  & 15.1 & 11.6 & 4.9  & 18.2 & 14.2 & 9.2 \\
 Python & 100.0 & 75.3 & 60.9  & 43.3 & 17.3 & 4.7  & 45.2 & 23.6 & 13.6  & 18.3 & 6.9 & 0.7  & 20.7 & 10.6 & 4.9 \\
 Ruby & 100.0 & 91.1 & 59.5  & 52.3 & 11.8 & 2.7  & 58.0 & 27.0 & 10.9  & 27.6 & 14.7 & 2.4  & 33.4 & 15.8 & 4.8 \\
+\hline
 \textbf{Mean} & \textbf{95.1} & \textbf{74.5} & \textbf{58.7}  & \textbf{30.6} & \textbf{14.0} & \textbf{7.8}  & \textbf{30.3} & \textbf{18.7} & \textbf{12.1}  & \textbf{15.1} & \textbf{9.7} & \textbf{4.3}  & \textbf{12.8} & \textbf{8.5} & \textbf{5.0} \\
 \end{tabular}
 \end{center}
