--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -47,7 +47,7 @@ We found ... % XXX
 Reliability, Experimentation, Measurement
 
 \keywords
-Programming Languages, Compiler, Fuzzing, Unit Testing
+Programming Languages; Fuzzing; Comparison; Rosetta Stone
 
 \section{Introduction} % {{{1
 A substitution of a comma with a period in project Mercury's working
